--- a/public/index.html
+++ b/public/index.html
@@ -4,19 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="./img/favicon/pngtree-minimalist-hot-coffee-with-brown-color-png-image_2846898.jpg" sizes="16x16">   
     <link rel="stylesheet" type="text/css" href="./output.css">
+    <script src="./js/main.js" type="text/javascript" async></script>
     <title>Vanh</title>
 </head>
 <body>
     <div id="root">
-        <div class="content-wrapper max-w-screen-2xl text-base mx-auto px-8 bg-slate-200">
-            <header class="py-6 mx-10">
-                <nav class="flex flex-row justify-between items-center">
+        <div class="content-wrapper font-Karla max-w-screen-2xl text-base mx-auto px-8 bg-slate-200">
+            <header class="p-6 mx-auto">
+                <nav class="flex flex-row justify-between items-center relative">
                     <div class="logo basis-2/6 text-center text-xl font-semibold cursor-pointer" > 
                         CoffeeStyle.
                     </div>
-                    <ul class="basis-3/6 flex items-center justify-end gap-8 uppercase text-sm text-gray-500 font-weigh-500" >
-                        <li class="ct-top-menu-item">
+                    <ul id="ct-top-menu" class="basis-3/6 hidden lg:flex lg:items-center lg:justify-end lg:gap-8 uppercase text-sm text-gray-500 font-weigh-500" >
+                        <li class="ct-top-menu-item ct-top-menu-item-active">
                             <a href="#" class="">Home</a>
                         </li>
                         <li class="ct-top-menu-item">
@@ -35,11 +37,11 @@
                             <a href="#" class="">StyleGuide</a>
                         </li>
                         <li class="ct-top-menu-item">
-                            <a href="https://www.facebook.com/vanhnd272" target="blank" class="">Vanhnddev2722</a>
+                            <a href="https://www.facebook.com/vanhnd272" target="blank" class="">Vanhnddev272</a>
                         </li>
                     </ul>
 
-                    <ul class="basis-1/6 flex justify-start items-center ml-16 uppercase text-sm text-gray-500 font-medium">
+                    <ul class="basis-3/6 lg:basis-1/6 flex justify-end lg:justify-start items-center ml-16 uppercase text-sm text-gray-500 font-medium">
                         <li class="ct-top-menu-item"> 
                             <a href="#" class="flex items-center">
                                 <svg xmlns="http://www.w3.org/2000/svg" class="ct-icon" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
@@ -50,6 +52,12 @@
                             </a>
                         </li>
                     </ul>
+
+                    <div class="basis-1/6 lg:hidden flex items-center hover:cursor-pointer px-3 sm:px-10">
+                        <svg id="ct-toggle-top-menu-icon" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M4 6h16M4 12h16M4 18h16" />
+                          </svg> 
+                    </div>
                 </nav>         
             </header>
     
