--- a/public/index.html
+++ b/public/index.html
@@ -7,22 +7,22 @@
     <link rel="icon" href="./img/favicon/pngtree-minimalist-hot-coffee-with-brown-color-png-image_2846898.jpg" sizes="16x16">   
     <link rel="stylesheet" type="text/css" href="./output.css">
     <script src="./js/main.js" type="text/javascript" async></script>
-    <title>Vanh</title>
+    <title>CoffeeStyle</title>
 </head>
 <body>
     <div id="root">
-        <div class="content-wrapper font-Karla max-w-screen-2xl text-base mx-auto px-8 bg-slate-200">
+        <div class="content-wrapper font-Karla max-w-screen-2xl text-base font-normal mx-auto px-8">
             <header class="p-6 mx-auto">
-                <nav class="flex flex-row justify-between items-center relative">
+                <nav class="tracking-wider font-semibold flex flex-row justify-between items-center relative">
                     <div class="logo basis-2/6 text-center text-xl font-semibold cursor-pointer" > 
                         CoffeeStyle.
                     </div>
-                    <ul id="ct-top-menu" class="basis-3/6 hidden lg:flex lg:items-center lg:justify-end lg:gap-8 uppercase text-sm text-gray-500 font-weigh-500" >
-                        <li class="ct-top-menu-item ct-top-menu-item-active">
+                    <ul id="ct-top-menu" class="basis-3/6 hidden lg:flex lg:items-center lg:justify-end lg:gap-8 uppercase text-sm text-gray-500 " >
+                        <li class="ct-top-menu-item ct-top-menu-item-active lg:pl-4">
                             <a href="#" class="">Home</a>
                         </li>
                         <li class="ct-top-menu-item">
-                            <a href="#" class="">Our products</a>
+                            <a href="#" class="">Products</a>
                         </li>
                         <li class="ct-top-menu-item"> 
                             <a href="#" class="">Blog</a>
@@ -37,7 +37,7 @@
                             <a href="#" class="">StyleGuide</a>
                         </li>
                         <li class="ct-top-menu-item">
-                            <a href="https://www.facebook.com/vanhnd272" target="blank" class="">Vanhnddev272</a>
+                            <a href="https://www.facebook.com/vanhnd272" target="blank" class="">Vanhnd272</a>
                         </li>
                     </ul>
 
@@ -62,7 +62,26 @@
             </header>
     
             <main>
-                <div class="slider">Slider</div>
+                <div class="slider h-[530px] bg-[url('./img/slider-bg.jpg')] bg-cover bg-no-repeat bg-bottom">
+                    <div class="w-full h-full flex justify-center items-center bg-gray-900 bg-opacity-40">
+                        <div class="mx-16 text-white text-center">
+                            <div class="uppercase text-sm tracking-wider mb-6 opacity-90">
+                                Best place to buy design 
+                            </div>
+                            <div class="text-5xl mb-6">
+                                Coffee Mugs
+                            </div>
+                            <div class="text-lg mb-8 opacity-90">
+                                The most versatile furniture system ever created. Designed to fit your life, made to move and grow.
+                            </div>
+                            <div class="flex justify-center">
+                                <div class="uppercase cursor-pointer text-xs font-bold bg-white text-gray-900 w-max tracking-widest px-4 py-5 hover:bg-opacity-95">
+                                    Explore Our Products
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
                 <!-- End slider -->
 
                 <div class="story">
