--- a/public/index.html
+++ b/public/index.html
@@ -14,11 +14,11 @@
         <div class="content-wrapper font-Karla max-w-screen-2xl text-base font-normal mx-auto px-8">
             <header class="p-6 mx-auto">
                 <nav class="tracking-wider font-semibold flex flex-row justify-between items-center relative">
-                    <div class="logo basis-2/6 text-center text-xl font-semibold cursor-pointer" > 
+                    <div class="logo basis-2/6 text-center text-xl font-semibold cursor-pointer lg:pr-4" > 
                         CoffeeStyle.
                     </div>
                     <ul id="ct-top-menu" class="basis-3/6 hidden lg:flex lg:items-center lg:justify-end lg:gap-8 uppercase text-sm text-gray-500 " >
-                        <li class="ct-top-menu-item ct-top-menu-item-active lg:pl-4">
+                        <li class="ct-top-menu-item ct-top-menu-item-active">
                             <a href="#" class="">Home</a>
                         </li>
                         <li class="ct-top-menu-item">
@@ -48,7 +48,7 @@
                                     <path stroke-linecap="round" stroke-linejoin="round" d="M16 11V7a4 4 0 00-8 0v4M5 9h14l1 12H4L5 9z" />
                                   </svg>
                                 <span class="mx-1.5">Cart</span>
-                                <span class="ct-badge-circle bg-orange-400 text-white">0</span>
+                                <span class="ct-badge-circle bg-gray-400 text-white">0</span>
                             </a>
                         </li>
                     </ul>
@@ -85,24 +85,84 @@
                 <!-- End slider -->
 
                 <div class="story">
-                    Story
+                    <div class="w-full h-full flex justify-center items-center">
+                        <div class="px-8 sm:px-16 md:px-32 lg:px-64 xl:px-96 py-28 text-center">
+                            <div class="text-3xl leading-10 font-normal mb-6">
+                                Even the all-powerful Pointing has no control about the blind texts.
+                            </div>
+                            <div class="text-gray-600 leading-7 mb-6">
+                                It is a paradisematic country, in which roasted parts of sentences fly into your mouth. <br> Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.
+                            </div>
+                            <a href="#" class="text-coffee-400 hover:text-coffee-600 relative after:absolute after:-bottom-2 after:left-0 after:h-px after:bg-coffee-50 after:w-full hover:after:bg-coffee-400 after:transition-all after:ease-in-out after:duration-500">
+                                Read the full Story
+                            </a>
+                        </div>
+                    </div>
                 </div>
                 <!-- End story -->
+
+                <div class="ct-subheadline">
+                    <div class="ct-subheadline-decor-line">
+
+                    </div>
+                    <div class="ct-subheadline-label">
+                        Featured mugs
+                    </div>
+                    <div class="ct-subheadline-decor-line">
+
+                    </div>
+                </div>
                 
                 <div class="featured-mugs">
                     featured-mugs
                 </div>
                 <!-- End featured-mugs -->
                 
+                <div class="ct-subheadline">
+                    <div class="ct-subheadline-decor-line">
+
+                    </div>
+                    <div class="ct-subheadline-label">
+                        More products
+                    </div>
+                    <div class="ct-subheadline-decor-line">
+
+                    </div>
+                </div>
+
                 <div class="more-products">
                     more-products
                 </div>
                 <!-- End more-products -->
 
+                <div class="ct-subheadline">
+                    <div class="ct-subheadline-decor-line">
+
+                    </div>
+                    <div class="ct-subheadline-label">
+                        Buy 2 mugs and get a coffee magazine free
+                    </div>
+                    <div class="ct-subheadline-decor-line">
+
+                    </div>
+                </div>
+
                 <div class="coffee-magazine">
                     coffee-magazine
                 </div>
                 <!-- End coffee-magazine -->
+
+                <div class="ct-subheadline">
+                    <div class="ct-subheadline-decor-line">
+
+                    </div>
+                    <div class="ct-subheadline-label">
+                        Behind the mugs, lifestyle stories
+                    </div>
+                    <div class="ct-subheadline-decor-line">
+
+                    </div>
+                </div>
 
                 <div class="lifestyle-stories">
                     lifestyle-stories
