--- a/public/index.html
+++ b/public/index.html
@@ -75,7 +75,7 @@
                                 The most versatile furniture system ever created. Designed to fit your life, made to move and grow.
                             </div>
                             <div class="flex justify-center">
-                                <div class="uppercase cursor-pointer text-xs font-bold bg-white text-gray-900 w-max tracking-widest px-4 py-5 hover:bg-opacity-95">
+                                <div class="ct-button bg-white text-gray-900 w-max ">
                                     Explore Our Products
                                 </div>
                             </div>
@@ -84,19 +84,17 @@
                 </div>
                 <!-- End slider -->
 
-                <div class="story">
-                    <div class="w-full h-full flex justify-center items-center">
-                        <div class="px-8 sm:px-16 md:px-32 lg:px-64 xl:px-96 py-28 text-center">
-                            <div class="text-3xl leading-10 font-normal mb-6">
-                                Even the all-powerful Pointing has no control about the blind texts.
-                            </div>
-                            <div class="text-gray-600 leading-7 mb-6">
-                                It is a paradisematic country, in which roasted parts of sentences fly into your mouth. <br> Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.
-                            </div>
-                            <a href="#" class="text-coffee-400 hover:text-coffee-600 relative after:absolute after:-bottom-2 after:left-0 after:h-px after:bg-coffee-50 after:w-full hover:after:bg-coffee-400 after:transition-all after:ease-in-out after:duration-500">
-                                Read the full Story
-                            </a>
+                <div class="story flex justify-center items-center">
+                    <div class="px-8 sm:px-16 md:px-32 lg:px-64 xl:px-96 py-28 text-center">
+                        <div class="text-3xl leading-10 font-normal mb-6">
+                            Even the all-powerful Pointing has no control about the blind texts.
                         </div>
+                        <div class="text-gray-600 leading-7 mb-6">
+                            It is a paradisematic country, in which roasted parts of sentences fly into your mouth. <br> Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.
+                        </div>
+                        <a href="#" class="text-coffee-400 hover:text-coffee-600 relative after:absolute after:-bottom-2 after:left-0 after:h-px after:bg-coffee-50 after:w-full hover:after:bg-coffee-400 after:transition-all after:ease-in-out after:duration-500">
+                            Read the full Story
+                        </a>
                     </div>
                 </div>
                 <!-- End story -->
@@ -113,8 +111,58 @@
                     </div>
                 </div>
                 
-                <div class="featured-mugs">
-                    featured-mugs
+                <div class="featured-mugs w-[95%] lg:w-[65%] mx-auto mb-24">
+                    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 gap-8 lg:gap-4">
+                        <div class="ct-product-card ">
+                            <div class="h-[440px] sm:h-[540px] bg-[url('./img/featured-mugs/featured-mugs1.jpg')] bg-cover bg-no-repeat bg-center ">
+                                <a href="">
+                                    <div class="w-full h-full hover:bg-gray-900 hover:bg-opacity-10 hover:transition-all hover:ease hover:duration-400 cursor-pointer relative group">                                        
+                                        <div class="ct-button absolute bg-white text-gray-900 w-11/12 bottom-3 left-1/2 -translate-x-1/2 hidden group-hover:block group-hover:animate-fadeIn">
+                                            Explore Mugs
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="text-center mt-8">
+                                <a href="#" alt="product-name" class="">
+                                    <div class="text-xl mb-3 hover:text-coffee-400">
+                                        Pink Premium Ceremic
+                                    </div>
+                                </a>
+                                <div class="ct-price">
+                                    <span class="text-gray-600 leading-7">$ 99.00 USD</span>
+                                </div>
+                            </div>
+                        </div>
+
+
+                        <div class="ct-product-card">
+                            <div class="h-[440px] sm:h-[540px] bg-[url('./img/featured-mugs/featured-mugs2.jpg')] bg-cover bg-no-repeat bg-center ">
+                                <a href="">
+                                    <div class="w-full h-full hover:bg-gray-900 hover:bg-opacity-10 hover:transition-all hover:ease hover:duration-400 cursor-pointer relative group"> 
+                                        <div class="absolute w-[100px] bg-white py-2 px-4 top-3 right-3 text-center text-coffee-400 font-bold leading-7 cursor-text">
+                                            On Sale.
+                                        </div>
+                                        <div class="ct-button absolute bg-white text-gray-900 w-11/12 bottom-3 left-1/2 -translate-x-1/2 hidden group-hover:block group-hover:animate-fadeIn">
+                                            Explore Mugs
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="text-center mt-8">
+                                <a href="#" alt="product-name" class="">
+                                    <div class="text-xl mb-3 hover:text-coffee-400">
+                                        Golden Designers Mug
+                                    </div>
+                                </a>
+                                <div class="ct-price">
+                                    <span class="text-coffee-400 text-xl leading-8 mr-3">$50.00</span>
+                                    <span class="text-gray-400 leading-7 line-through">$ 69.00 USD</span>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
                 </div>
                 <!-- End featured-mugs -->
                 
