--- a/public/index.html
+++ b/public/index.html
@@ -114,7 +114,7 @@
                 <div class="featured-mugs w-[95%] lg:w-[65%] mx-auto mb-24">
                     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 gap-8 lg:gap-4">
                         <div class="ct-product-card ">
-                            <div class="h-[440px] sm:h-[540px] bg-[url('./img/featured-mugs/featured-mugs1.jpg')] bg-cover bg-no-repeat bg-center ">
+                            <div class="h-[380px] sm:h-[440px] md:h-[540px] bg-[url('./img/featured-mugs/featured-mugs1.jpg')] bg-cover bg-no-repeat bg-center ">
                                 <a href="">
                                     <div class="w-full h-full hover:bg-gray-900 hover:bg-opacity-10 hover:transition-all hover:ease hover:duration-400 cursor-pointer relative group">                                        
                                         <div class="ct-button absolute bg-white text-gray-900 w-11/12 bottom-3 left-1/2 -translate-x-1/2 hidden group-hover:block group-hover:animate-fadeIn">
@@ -137,7 +137,7 @@
 
 
                         <div class="ct-product-card">
-                            <div class="h-[440px] sm:h-[540px] bg-[url('./img/featured-mugs/featured-mugs2.jpg')] bg-cover bg-no-repeat bg-center ">
+                            <div class="h-[380px] sm:h-[440px] md:h-[540px] bg-[url('./img/featured-mugs/featured-mugs2.jpg')] bg-cover bg-no-repeat bg-center ">
                                 <a href="">
                                     <div class="w-full h-full hover:bg-gray-900 hover:bg-opacity-10 hover:transition-all hover:ease hover:duration-400 cursor-pointer relative group"> 
                                         <div class="absolute w-[100px] bg-white py-2 px-4 top-3 right-3 text-center text-coffee-400 font-bold leading-7 cursor-text">
@@ -178,8 +178,216 @@
                     </div>
                 </div>
 
-                <div class="more-products">
-                    more-products
+                <div class="more-products w-[95%] md:w-[85%] lg:w-[70%] mx-auto mb-16">
+                    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 md:gap-4">
+                        <div class="ct-product-card ">
+                            <div class="h-[380px] bg-[url('./img/more-products/more-products1.jpg')] bg-cover bg-no-repeat bg-center ">
+                                <a href="">
+                                    <div class="w-full h-full hover:bg-gray-900 hover:bg-opacity-10 hover:transition-all hover:ease hover:duration-400 cursor-pointer relative group">
+                                        <div class="absolute w-[100px] bg-white py-2 px-4 top-3 right-3 text-center text-coffee-400 font-bold leading-7 cursor-text">
+                                            On Sale.
+                                        </div>                                        
+                                        <div class="ct-button absolute bg-white text-gray-900 w-11/12 bottom-3 left-1/2 -translate-x-1/2 hidden group-hover:block group-hover:animate-fadeIn">
+                                            Explore Mugs
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="text-center my-8">
+                                <a href="#" alt="product-name" class="">
+                                    <div class="text-xl mb-3 hover:text-coffee-400">
+                                        Red Love Cup
+                                    </div>
+                                </a>
+                                <div class="ct-price">
+                                    <span class="text-coffee-400 text-xl leading-8 mr-3">$25.00</span>
+                                    <span class="text-gray-400 leading-7 line-through">$ 37.00 USD</span>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="ct-product-card">
+                            <div class="h-[380px] bg-[url('./img/more-products/more-products2.jpg')] bg-cover bg-no-repeat bg-center ">
+                                <a href="">
+                                    <div class="w-full h-full hover:bg-gray-900 hover:bg-opacity-10 hover:transition-all hover:ease hover:duration-400 cursor-pointer relative group"> 
+                                        <div class="absolute w-[100px] bg-white py-2 px-4 top-3 right-3 text-center text-coffee-400 font-bold leading-7 cursor-text">
+                                            On Sale.
+                                        </div>
+                                        <div class="ct-button absolute bg-white text-gray-900 w-11/12 bottom-3 left-1/2 -translate-x-1/2 hidden group-hover:block group-hover:animate-fadeIn">
+                                            Explore Mugs
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="text-center my-8">
+                                <a href="#" alt="product-name" class="">
+                                    <div class="text-xl mb-3 hover:text-coffee-400">
+                                        Black Tea Cup
+                                    </div>
+                                </a>
+                                <div class="ct-price">
+                                    <span class="text-coffee-400 text-xl leading-8 mr-3">$15.00</span>
+                                    <span class="text-gray-400 leading-7 line-through">$ 29.00 USD</span>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="ct-product-card">
+                            <div class="h-[380px] bg-[url('./img/more-products/more-products3.jpg')] bg-cover bg-no-repeat bg-center ">
+                                <a href="">
+                                    <div class="w-full h-full hover:bg-gray-900 hover:bg-opacity-10 hover:transition-all hover:ease hover:duration-400 cursor-pointer relative group">                                         
+                                        <div class="ct-button absolute bg-white text-gray-900 w-11/12 bottom-3 left-1/2 -translate-x-1/2 hidden group-hover:block group-hover:animate-fadeIn">
+                                            Explore Mugs
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="text-center my-8">
+                                <a href="#" alt="product-name" class="">
+                                    <div class="text-xl mb-3 hover:text-coffee-400">
+                                       B&W Essentials Mug
+                                    </div>
+                                </a>
+                                <div class="ct-price">
+                                    <span class="text-gray-600 leading-7">$ 19.00 USD</span>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="ct-product-card">
+                            <div class="h-[380px] bg-[url('./img/more-products/more-products4.jpg')] bg-cover bg-no-repeat bg-center ">
+                                <a href="">
+                                    <div class="w-full h-full hover:bg-gray-900 hover:bg-opacity-10 hover:transition-all hover:ease hover:duration-400 cursor-pointer relative group"> 
+                                        <div class="ct-button absolute bg-white text-gray-900 w-11/12 bottom-3 left-1/2 -translate-x-1/2 hidden group-hover:block group-hover:animate-fadeIn">
+                                            Explore Mugs
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="text-center my-8">
+                                <a href="#" alt="product-name" class="">
+                                    <div class="text-xl mb-3 hover:text-coffee-400">
+                                        Winter Style Mug
+                                    </div>
+                                </a>
+                                <div class="ct-price">
+                                    <span class="text-gray-600 leading-7">$ 25.00 USD</span>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="ct-product-card">
+                            <div class="h-[380px] bg-[url('./img/more-products/more-products5.jpg')] bg-cover bg-no-repeat bg-center ">
+                                <a href="">
+                                    <div class="w-full h-full hover:bg-gray-900 hover:bg-opacity-10 hover:transition-all hover:ease hover:duration-400 cursor-pointer relative group">
+                                        <div class="ct-button absolute bg-white text-gray-900 w-11/12 bottom-3 left-1/2 -translate-x-1/2 hidden group-hover:block group-hover:animate-fadeIn">
+                                            Explore Mugs
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="text-center my-8">
+                                <a href="#" alt="product-name" class="">
+                                    <div class="text-xl mb-3 hover:text-coffee-400">
+                                        Ceramic Tea
+                                    </div>
+                                </a>
+                                <div class="ct-price">
+                                    <span class="text-gray-600 leading-7">$ 46.00 USD</span>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="ct-product-card">
+                            <div class="h-[380px] bg-[url('./img/more-products/more-products6.jpg')] bg-cover bg-no-repeat bg-center ">
+                                <a href="">
+                                    <div class="w-full h-full hover:bg-gray-900 hover:bg-opacity-10 hover:transition-all hover:ease hover:duration-400 cursor-pointer relative group">
+                                        <div class="ct-button absolute bg-white text-gray-900 w-11/12 bottom-3 left-1/2 -translate-x-1/2 hidden group-hover:block group-hover:animate-fadeIn">
+                                            Explore Mugs
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="text-center my-8">
+                                <a href="#" alt="product-name" class="">
+                                    <div class="text-xl mb-3 hover:text-coffee-400">
+                                        No Handle Bar Cup
+                                    </div>
+                                </a>
+                                <div class="ct-price">
+                                    <span class="text-gray-600 leading-7">$ 34.00 USD</span>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="ct-product-card">
+                            <div class="h-[380px] bg-[url('./img/more-products/more-products7.jpg')] bg-cover bg-no-repeat bg-center ">
+                                <a href="">
+                                    <div class="w-full h-full hover:bg-gray-900 hover:bg-opacity-10 hover:transition-all hover:ease hover:duration-400 cursor-pointer relative group">
+                                        <div class="ct-button absolute bg-white text-gray-900 w-11/12 bottom-3 left-1/2 -translate-x-1/2 hidden group-hover:block group-hover:animate-fadeIn">
+                                            Explore Mugs
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="text-center my-8">
+                                <a href="#" alt="product-name" class="">
+                                    <div class="text-xl mb-3 hover:text-coffee-400">
+                                        Espresso Cup by Mugs.co
+                                    </div>
+                                </a>
+                                <div class="ct-price">
+                                    <span class="text-gray-600 leading-7">$ 25.00 USD</span>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="ct-product-card">
+                            <div class="h-[380px] bg-[url('./img/more-products/more-products8.jpg')] bg-cover bg-no-repeat bg-center ">
+                                <a href="">
+                                    <div class="w-full h-full hover:bg-gray-900 hover:bg-opacity-10 hover:transition-all hover:ease hover:duration-400 cursor-pointer relative group"> 
+                                        <div class="ct-button absolute bg-white text-gray-900 w-11/12 bottom-3 left-1/2 -translate-x-1/2 hidden group-hover:block group-hover:animate-fadeIn">
+                                            Explore Mugs
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="text-center my-8">
+                                <a href="#" alt="product-name" class="">
+                                    <div class="text-xl mb-3 hover:text-coffee-400">
+                                        Pink Premium Ceramic
+                                    </div>
+                                </a>
+                                <div class="ct-price">
+                                    <span class="text-gray-600 leading-7">$ 99.00 USD</span>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="ct-product-card">
+                            <div class="h-[380px] bg-[url('./img/more-products/more-products9.jpg')] bg-cover bg-no-repeat bg-center ">
+                                <a href="">
+                                    <div class="w-full h-full hover:bg-gray-900 hover:bg-opacity-10 hover:transition-all hover:ease hover:duration-400 cursor-pointer relative group">
+                                        <div class="ct-button absolute bg-white text-gray-900 w-11/12 bottom-3 left-1/2 -translate-x-1/2 hidden group-hover:block group-hover:animate-fadeIn">
+                                            Explore Mugs
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="text-center my-8">
+                                <a href="#" alt="product-name" class="">
+                                    <div class="text-xl mb-3 hover:text-coffee-400">
+                                        Summer Designer Cup
+                                    </div>
+                                </a>
+                                <div class="ct-price">
+                                    <span class="text-gray-600 leading-7">$ 29.00 USD</span>
+                                </div>
+                            </div>
+                        </div>
+
+                                            
+                    </div>
                 </div>
                 <!-- End more-products -->
 
