--- a/public/index.html
+++ b/public/index.html
@@ -178,7 +178,7 @@
                     </div>
                 </div>
 
-                <div class="more-products w-[95%] md:w-[85%] lg:w-[70%] mx-auto mb-16">
+                <div class="more-products w-[95%] md:w-[85%] lg:w-[75%] mx-auto mb-16">
                     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 md:gap-4">
                         <div class="ct-product-card ">
                             <div class="h-[380px] bg-[url('./img/more-products/more-products1.jpg')] bg-cover bg-no-repeat bg-center ">
@@ -403,8 +403,24 @@
                     </div>
                 </div>
 
-                <div class="coffee-magazine">
-                    coffee-magazine
+                <div class="coffee-magazine w-[95%] md:w-[85%] lg:w-[75%] mx-auto mb-24 ">
+                    <div class="flex flex-col md:flex-row justify-center items-center gap-5 ">
+                        <div class="ct-magazine-images basis-1/2 md:flex md:flex-row gap-5 w-full h-full mb-3 xs:mb-5 md:mb-0 ">
+                            <div class="ct-magazine-big-image h-[280px] basis-2/3 bg-[url('./img/coffee-magazines/coffee-magazines1.jpg')] bg-cover bg-no-repeat bg-center mb-4 md:mb-0 ">
+
+                            </div>
+                            <div class="ct-magazine-small-images basis-1/3 flex flex-row md:flex-col gap-3 xs:gap-5">
+                                <div class="h-[130px] xs:h-[200px] md:h-[130px] basis-1/2 bg-[url('./img/coffee-magazines/coffee-magazines2.jpg')] bg-cover bg-no-repeat bg-center"></div>
+                                <div class="h-[130px] xs:h-[200px] md:h-[130px] basis-1/2 bg-[url('./img/coffee-magazines/coffee-magazines3.jpg')] bg-cover bg-no-repeat bg-center"></div>
+                            </div>
+                        </div>
+                        <div class="ct-magazine-post basis-1/2 ml-6 xl:ml-16 text-center md:text-left ">
+                            <div class="uppercase text-xs font-bold tracking-widest mb-3 text-gray-500">Premium Offer</div>
+                            <div class="text-4xl leading-[50px] mb-3">Get our Coffee Magazine</div>
+                            <div class="text-gray-500 mb-3">The most versatile furniture system ever created. Designed to fit your life.</div>
+                            <div class="ct-button bg-gray-900 text-white font-bold tracking-widest w-max mx-auto md:mx-0">Start Shopping</div>
+                        </div>
+                    </div>
                 </div>
                 <!-- End coffee-magazine -->
 
