--- a/public/index.html
+++ b/public/index.html
@@ -424,9 +424,13 @@
                 </div>
                 <!-- End coffee-magazine -->
 
+                <div class="ct-parallax-section bg-[url('./img/parallax-bg.jpg')] bg-cover bg-no-repeat bg-center h-[340px] mb-24 bg-fixed w-[100vw] relative left-[calc(-50vw+50%)] ">
+
+                </div>
+
                 <div class="ct-subheadline">
                     <div class="ct-subheadline-decor-line">
-                        DKM cuoic song
+                    
                     </div>
                     <div class="ct-subheadline-label">
                         Behind the mugs, lifestyle stories
